fixed modal overlay, card spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* gap: 5px; */
 }
 
 .card-container {
@@ -533,7 +534,7 @@ button {
   main {
     display: flex;
     justify-content: space-evenly;
-    width: 70%;
+    width: 72%;
   }
 
   .card-wrapper {
@@ -543,6 +544,7 @@ button {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    gap: 10px;
   }
 
   footer {
@@ -602,7 +604,7 @@ button {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 900;
+  z-index: 2000;
 }
 
 .modal {
